Changed background image behind 3D model

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ header .container {
 }
 
 .section-three {
-    background: url('images/pexels-miguel-á-padriñán-3785935.jpg');
+    background: url('images/pexels-lucas-pezeta-3772353.jpg');
     background-size: cover;
 }
 
