Added FAQ section

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ header .container {
     background-size: cover;
 }
 
-.section-four {
+.section-five {
     background: url('images/pexels-roberto-shumski-5555192.jpg');
     background-size: cover;
 }
