--- a/src/native-css-styles.css
+++ b/src/native-css-styles.css
@@ -1,3 +1,8 @@
 .custom-center-content-container{
     max-width: 1500px; margin: auto;
 }
+.image-item:hover,
+.image-item.active {
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.25);
+    transform: scale(1.1);
+}
